--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --cols: 1;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -5,10 +9,17 @@ html {
 body {
   margin: 0;
   padding: 0;
+  min-width: 252px;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+.container {
+  max-width: 2016px;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 .pointer {
@@ -17,6 +28,12 @@ body {
 
 .zoom {
   cursor: zoom-in;
+}
+
+#content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .card-image {
@@ -29,6 +46,7 @@ body {
 
 img {
   border: 0;
+  border-radius: 8px;
   height: auto;
   max-width: 100%;
   vertical-align: middle;
@@ -36,6 +54,8 @@ img {
 
 .card-image__hover {
   display: none;
+  border: 0;
+  border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.25);
   position: absolute;
   height: 100%;
@@ -46,4 +66,54 @@ img {
 
 .card-image:hover > .card-image__hover {
   display: block;
+}
+
+.card-image-container {
+  width: fit-content;
+}
+
+.card-image + .card-image {
+  margin-top: 16px;
+}
+
+@media screen and (min-width: 536px) {
+  :root {
+    --cols: 2;
+  }
+}
+
+@media screen and (min-width: 788px) {
+  :root {
+    --cols: 3;
+  }
+}
+
+@media screen and (min-width: 1040px) {
+  :root {
+    --cols: 4;
+  }
+}
+
+@media screen and (min-width: 1292px) {
+  :root {
+    --cols: 5;
+  }
+}
+
+@media screen and (min-width: 1544px) {
+  :root {
+    --cols: 6;
+  }
+}
+
+@media screen and (min-width: 1796px) {
+  :root {
+    --cols: 7;
+  }
+}
+
+@media screen and (min-width: 2048px) {
+  :root {
+    --cols: 8;
+  }
 }
