--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   min-width: 252px;
+  font-family: 'Oxygen', sans-serif;
 }
 
 *, *::before, *::after {
@@ -28,6 +29,31 @@ body {
 
 .zoom {
   cursor: zoom-in;
+}
+
+#navbar-pinterest {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  padding: 16px 4px;
+}
+
+#switch-page {
+  margin-right: auto;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 100vw;
+  cursor: pointer;
+}
+
+.icon:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 #content {
