--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   min-width: 252px;
   font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
 }
 
 *, *::before, *::after {
@@ -100,6 +101,55 @@ img {
 
 .card-image + .card-image {
   margin-top: 16px;
+}
+
+.btn-white {
+  position: absolute;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 8px;
+  background-color: #ffffffcc;
+}
+
+.btn-white:hover {
+  background-color: #ffffff;
+}
+
+.btn-red {
+  position: absolute;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100vw;
+  padding: 12px 16px;
+  background-color: #c00;
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  color: white;
+}
+
+.btn-red:hover {
+  background-color: #c00c;
+}
+
+.save-img {
+  top: 12px;
+  right: 10px;
+}
+
+.download-img {
+  bottom: 12px;
+  right: 8px;
+}
+
+.option-img {
+  bottom: 12px;
+  right: 48px;
 }
 
 @media screen and (min-width: 536px) {
