--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 80px 0 0 0;
   padding: 0;
   min-width: 252px;
   font-family: 'Oxygen', sans-serif;
@@ -33,10 +33,15 @@ body {
 }
 
 #navbar-pinterest {
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  background-color: white;
   display: flex;
   align-items: center;
   height: 80px;
-  padding: 16px 4px;
+  padding: 4px 16px;
 }
 
 #switch-page {
@@ -150,6 +155,136 @@ img {
 .option-img {
   bottom: 12px;
   right: 48px;
+}
+
+#more-options:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+#switch-page {
+  display: flex;
+  align-items: center;
+  padding: 14px;
+}
+
+#switch-page:hover {
+  border-radius: 100vw;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.arrow {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+
+.arrow::before {
+  content: '';
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 4px;
+  left: 7px;
+  border-left: 2px solid #767676;
+  border-top: 2px solid #767676;
+  transform: rotate(225deg);
+}
+
+input:focus {
+  outline-color: rgb(0 132 255/0.5);
+}
+
+.modal {
+  width: 360px;
+  max-width: 95%;
+  display: none;
+  position: absolute;
+  background-color: white;
+  /* align-items: center; */
+  /* justify-content: center; */
+  border-radius: 8px;
+  padding: 8px;
+  /* border: 1px solid #76767622; */
+  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+  top: 64px;
+}
+
+.active + .modal, #more-options.active + .modal {
+  display: flex;
+  flex-direction: column;
+}
+.active path {
+  fill: black;
+}
+
+#add-pin-modal {
+  width: 164px;
+  right: 126px;
+}
+
+#add-pin-modal > div {
+  /* text-align: center; */
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+#add-pin-modal > div:hover {
+  background-color: #76767622;
+}
+
+#notifications-modal {
+  text-align: center;
+  right: 8px;
+  height: calc(98vh - 64px);
+}
+
+#message-modal {
+  right: 8px;
+  height: calc(95vh - 64px);
+  border: 1px solid #76767622;
+}
+
+#message-modal h2 {
+  font-size: 32px;
+}
+
+#message-modal input {
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
+  cursor: pointer;
+  padding: 8px 40px;
+  border-radius: 8px;
+  border: 1px solid #767676CC;
+  width: 100%
+}
+
+#message-modal input:focus {
+  border: 1px solid blue;
+}
+/* 
+#message-modal input:hover {
+  border: 1px solid #767676;
+} */
+
+#more-options-modal {
+  padding: 8px;
+  right: 8px;
+}
+
+#more-options-modal > * {
+  padding: 8px;
+}
+
+.options-info > div {
+  padding: 8px;
+}
+
+.hover:hover {
+  background-color: #76767622;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 536px) {
